--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="">
   <div class="h-screen body" style="justify-content: center; align-items: center; display: flex;">
 
-    <div class="d-flex flex-column justify-content-center w-100 h-100">
+    <div class="d-flex flex-column justify-center w-100 h-100">
 
       <div class="w-[400px] h-[400px] bg-teal-500 z-20 flex items-center justify-center rounded-lg">
         <div class="flex flex-col space-y-10 z-30">
