--- a/src/app/views/opciones/clientes/clientes.component.html
+++ b/src/app/views/opciones/clientes/clientes.component.html
@@ -7,7 +7,8 @@
   <div class="flex justify-center">
     <div class="flex justify-between flex items-center w-[85%] h-[65px] items-center">
       <div class=" flex items-center">
-        <i><img class="w-[50px] h-[50px]" style="cursor: pointer;" [routerLink]="'/inicio'" src="assets/img/bookzone-icon.png" alt=""></i>
+        <i><img class="w-[50px] h-[50px]" style="cursor: pointer;" [routerLink]="'/inicio'"
+            src="assets/img/bookzone-icon.png" alt=""></i>
       </div>
       <div>
         <button mat-button [matMenuTriggerFor]="menu"><i><img class="w-[30px] h-[35px]" src="assets/img/menu.png"
@@ -23,58 +24,51 @@
       </div>
     </div>
   </div>
- 
+
 
 </section>
+<p class="mt-6 flex justify-center text-[30px]" style="color: black;"> <b>Clientes de Bookzone</b></p>
 <section class="flex justify-center mt-4">
+
+
+
+
   <section class="relative" style="z-index: 2; width: 100%;">
     <div class="flex justify-center">
-    <div class="demo-button-container flex flex-col space-y-4">
-      <button mat-raised-button (click)="addData()" class="demo-button">
-        Add data
-      </button>
-      <button
-          mat-raised-button
-          [disabled]="!dataSource.length"
-          (click)="removeData()"
-          class="demo-button">
-        Remove data
-      </button>
+      <div class="demo-button-container flex flex-col space-y-4">
+
+
+      </div>
+      <div class="container">
+      <table class="data w-[85%] table table-dark table-striped">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">DNI</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Direccion</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Eliminar</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let cliente of clientes">
+            <th scope="row">{{cliente.idcli}}</th>
+            <td>{{cliente.dni}}</td>
+            <td>{{cliente.nombre}}</td>
+            <td>{{cliente.direccion}}</td>
+            <td> <button type="button" name="button" class="btn btn-primary" [routerLink]="['/cliente/form', cliente.idcli]">Editar</button></td>
+            <td> <button class="btn btn-danger" (click)="delete(cliente)">Eliminar</button></td>
+          </tr>
+        </tbody>
+
+      </table>
     </div>
-    <table mat-table [dataSource]="dataSource" class="ml-4 mat-elevation-z8 demo-table" style="width: 80%;">
-      <!-- Position Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id Cliente</th>
-        <td mat-cell *matCellDef="let element">{{element.id}}</td>
-      </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="dni">
-        <th mat-header-cell *matHeaderCellDef>DNI</th>
-        <td mat-cell *matCellDef="let element">{{element.dni}}</td>
-      </ng-container>
+    </div>
+    <div class="mt-3 w-[50px] ml-12">
+      <a [routerLink]="['/cliente/form']"><img src="assets/img/agregar-libro.png" alt=""></a>
+    </div>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let element">{{element.name}}</td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="direccion">
-        <th mat-header-cell *matHeaderCellDef>direccion</th>
-        <td mat-cell *matCellDef="let element">{{element.direccion}}</td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="estado">
-        <th mat-header-cell *matHeaderCellDef>estado</th>
-        <td mat-cell *matCellDef="let element">{{element.estado}}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
   </section>
-  </section>
+</section>
