--- a/src/app/views/opciones/producto/producto.component.html
+++ b/src/app/views/opciones/producto/producto.component.html
@@ -26,80 +26,60 @@
 
 </section>
 
+<p class="mt-6 flex justify-center text-[30px]" style="color: black;"> <b>Productos de Bookzone</b></p>
 <section class="flex justify-center mt-4">
+
+
+
+
   <section class="relative" style="z-index: 2; width: 100%;">
     <div class="flex justify-center">
-    <div class="demo-button-container flex flex-col space-y-4">
-      <button mat-raised-button (click)="addData()" class="demo-button">
-        Add data
-      </button>
-      <button
-          mat-raised-button
-          [disabled]="!dataSource.length"
-          (click)="removeData()"
-          class="demo-button">
-        Remove data
-      </button>
+      <div class="demo-button-container flex flex-col space-y-4">
+
+
+      </div>
+      <div class="container">
+      <table class="data w-[85%] table table-dark table-striped">
+        <thead>
+          <tr>
+            <th scope="col">ID Producto</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">precio</th>
+            <th scope="col">stock</th>
+            <th scope="col">estado</th>
+            <th scope="col">autor</th>
+            <th scope="col">editorial</th>
+            <th scope="col">numpag</th>
+            <th scope="col">sinopsis</th>
+            <th scope="col">Editar</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let producto of producto">
+            <th scope="row">{{producto.idprod}}</th>
+            <td>{{producto.nombre}}</td>
+            <td>{{producto.precio}}</td>
+            <td>{{producto.stock}}</td>
+            <td>{{producto.estado}}</td>
+            <td>{{producto.autor}}</td>
+            <td>{{producto.editorial}}</td>
+            <td>{{producto.numpag}}</td>
+            <td>{{producto.sinopsis}}</td>
+            <td> <button type="button" name="button" class="btn btn-primary" [routerLink]="['/producto/form', producto.idprod]">Editar</button></td>
+
+
+          </tr>
+        </tbody>
+
+      </table>
     </div>
-    <table mat-table [dataSource]="dataSource" class="ml-4 mat-elevation-z8 demo-table" style="width: 80%;">
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let element">{{element.position}}</td>
-      </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
-      </ng-container>
+    </div>
+    <div class="mt-3 w-[50px] ml-12">
+      <a [routerLink]="['/producto/form']"><img src="assets/img/agregar-libro.png" alt=""></a>
+    </div>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="precio">
-        <th mat-header-cell *matHeaderCellDef>Precio</th>
-        <td mat-cell *matCellDef="let element">{{element.precio}}</td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="stock">
-        <th mat-header-cell *matHeaderCellDef>stock</th>
-        <td mat-cell *matCellDef="let element">{{element.stock}}</td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="estado">
-        <th mat-header-cell *matHeaderCellDef>estado</th>
-        <td mat-cell *matCellDef="let element">{{element.estado}}</td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="autor">
-        <th mat-header-cell *matHeaderCellDef>autor</th>
-        <td mat-cell *matCellDef="let element">{{element.autor}}</td>
-      </ng-container>
-
-      
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="editorial">
-        <th mat-header-cell *matHeaderCellDef>editorial</th>
-        <td mat-cell *matCellDef="let element">{{element.editorial}}</td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="numpag">
-        <th mat-header-cell *matHeaderCellDef>numpag</th>
-        <td mat-cell *matCellDef="let element">{{element.numpag}}</td>
-      </ng-container>
-
-       <!-- Symbol Column -->
-       <ng-container matColumnDef="sinopsis">
-        <th mat-header-cell *matHeaderCellDef>sinopsis</th>
-        <td mat-cell *matCellDef="let element">{{element.sinopsis}}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
   </section>
-  </section>
+</section>
+
+
